--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "./src/app/assets/css/nucleo-icons.css",
               "./src/app/assets/css/nucleo-svg.css",
               "./src/app/assets/css/soft-ui-dashboard.css",
-              "./src/app/assets/css/soft-ui-dashboard.min.css"
+              "./src/app/assets/css/soft-ui-dashboard.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
