--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
